<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/library_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".LibraryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/white"
        android:elevation="3dp"
        app:title="Notices" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cousine"
                android:text="Retrofit"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#eeeeee"
                android:fontFamily="@font/cousine"
                android:padding="8dp"
                android:text="@string/Retrofit_library"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cousine"
                android:text="Circular Image"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#eeeeee"
                android:fontFamily="@font/cousine"
                android:padding="8dp"
                android:text="@string/Circle_image_library"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cousine"
                android:text="Picasso"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#eeeeee"
                android:fontFamily="@font/cousine"
                android:padding="8dp"
                android:text="@string/Picasso_library"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cousine"
                android:text="MK Loader"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#eeeeee"
                android:fontFamily="@font/cousine"
                android:padding="8dp"
                android:text="@string/mkLoader_library"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cousine"
                android:text="Jsoup"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#eeeeee"
                android:fontFamily="@font/cousine"
                android:padding="8dp"
                android:text="@string/Jsoup_library"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cousine"
                android:text="Gson"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#eeeeee"
                android:fontFamily="@font/cousine"
                android:padding="8dp"
                android:text="@string/Gson_library"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>